--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Ningyu Zhang，PhD 张凝玉"
+title: "Ningyu Zhang. PhD"
 author: "Ningyu Zhang"
 description: "Personal webpage“color: #f45;\">&lt;3</b>"
 permalink: /:title/
@@ -16,8 +16,8 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: Home Change, icon: home }
-  - {file: "README.md", title: About me, icon: address-card}
+  - {file: "index.html", title: "Home Change", icon: home }
+  - {file: "README.md", title: "About me", icon: address-card}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:n_zhang@g.harvard.edu"}
