--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Ningyu Zhang. PhD"
+title: "Dr Ningyu Zhang 张凝玉 "
 author: "Ningyu Zhang"
 description: "Personal webpage“color: #f45;\">&lt;3</b>"
 permalink: /:title/
