--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Dr Ningyu Zhang 张凝玉 "
 author: "Ningyu Zhang"
-description: "Personal webpage“color: #f45;\">&lt;3</b>"
+description: "Philosophia"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
