--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,11 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Home Change", icon: home }
-  - {file: "NZ_cv.pdf", title: "CV"} 
   - {file: "README.md", title: "About me"}
+  - {file: "/NZ_cv.pdf", title: "CV"} 
+  - {title: "Research", url:"https://scholar.google.com/citations?user=GMEpmDgAAAAJ&hl=en&oi=ao"}
+  - {file: "/images", title: "Photography"}
+  
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:n_zhang@g.harvard.edu"}
