--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal: true             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {title: "CV", file: "/raw/master/NZcv.pdf"} 
+  - {title: "CV", url: "https://ning-yu-zhang.github.io/folder/document.pdf"} 
   - {title: "PhD thesis", file: "NZphdfinal.pdf"}
   - {title: "Google Scholar", url: "https://scholar.google.com/citations?user=GMEpmDgAAAAJ&hl=en&oi=ao" }
-  - {title: "Photography", file: "/images"}
+  - {title: "Resources", file: "/images"}
   
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
