--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: true             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {title: "CV", url: "https://ning-yu-zhang.github.io/folder/document.pdf"} 
+  - {title: "CV", url: "https://ning-yu-zhang.github.io//blob/master/NINGYU ZHANG cv.pdf"} 
   - {title: "PhD thesis", file: "NZphdfinal.pdf"}
   - {title: "Google Scholar", url: "https://scholar.google.com/citations?user=GMEpmDgAAAAJ&hl=en&oi=ao" }
   - {title: "Resources", file: "/images"}
