--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Dr Ningyu Zhang 张凝玉 "
+title: "Dr. Ningyu Zhang 张凝玉 "
 author: "Ningyu Zhang"
 description: "Philosophia"
 permalink: /:title/
