--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Dr. Ningyu Zhang 张凝玉 "
 author: "Ningyu Zhang"
-description: "Cognise a sense of space and uncertainty in the brain"
+description: "Cognise a sense of space and uncertainty in the brain."
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
