--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:n_zhang@g.harvard.edu"}
   - {title: Github, icon: github, url: "https://github.com/ning-yu-zhang"}
-  - {title: Twitter, icon: twitter, url: "https://twitter.com/zhang_ningyu"}
+  - {title: Twitter, icon: twitter, url: "https://twitter.com/drzhangningyu"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
