--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal: true             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {title: "CV", url: "https://ning-yu-zhang.github.io/NINGYU ZHANG cv.pdf"} 
-  - {title: "PhD thesis", url: "https://discovery.ucl.ac.uk/id/eprint/10129923/"}
+  - {title: "PhD Thesis", url: "https://discovery.ucl.ac.uk/id/eprint/10129923/"}
   - {title: "Google Scholar", url: "https://scholar.google.com/citations?user=GMEpmDgAAAAJ&hl=en&oi=ao" }
   - {title: "Research Gate", url: "https://www.researchgate.net/profile/Ningyu-Zhang" }
  
