--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@ minimal: true             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {title: "CV", url: "https://ning-yu-zhang.github.io/NINGYU ZHANG cv.pdf"} 
   - {title: "PhD Thesis", url: "https://discovery.ucl.ac.uk/id/eprint/10129923/"}
-  - {title: "Google Scholar", url: "https://scholar.google.com/citations?user=IyQTFmgAAAAJ&hl=en" }
-  - {title: "Research Gate", url: "https://www.researchgate.net/profile/Ningyu-Zhang" }
+  - {title: "Google Scholar", url: "https://scholar.google.com/citations?user=IyQTFmgAAAAJ&hl=en"}
+  - {title: "Research Gate", url: "https://www.researchgate.net/profile/Ningyu-Zhang"}
  
   
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:n_zhang@g.harvard.edu"}
+  - {title: Mail, icon: envelope, url: "mailto:ningyu_zhang@outlook.com"}
   - {title: Github, icon: github, url: "https://github.com/ning-yu-zhang"}
   - {title: Twitter, icon: twitter, url: "https://twitter.com/drzhangningyu"}
 
