--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal: true             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {title: "CV", url: "https://ning-yu-zhang.github.io/NINGYU ZHANG cv.pdf"} 
   - {title: "PhD Thesis", url: "https://discovery.ucl.ac.uk/id/eprint/10129923/"}
-  - {title: "Google Scholar", url: "https://scholar.google.com/citations?hl=en&user=IyQTFmgAAAAJ&view_op=list_works&sortby=pubdate"}
+  - {title: "Google Scholar", url: "https://scholar.google.com/citations?user=IyQTFmgAAAAJ&hl=en&citsig=AMD79oq0k3XLZcNQSey7VZa-c0gpJnmNEQ"}
   - {title: "Research Gate", url: "https://www.researchgate.net/profile/Ningyu-Zhang"}
  
   
